@startuml


interface IRequirement
{
    Name : string
    bool HasPassed()
    double CalculateCompletionPercent()
}

class AttendanceRequirement
{
    Lessons : List<Lesson>
}

class ManualApprovalRequirement
{
}

class AgeRequirement
{
}

class ProgressionStage
{
    Name : string
    Requirements : List<IRequirement>
    bool IsComplete()
}

interface IProgression
{
    Name : string
    Stages : List<ProgressionStage>
    CurrentStageNumber : int
    ProgressionStage GetCurrentStage()
    double CalculateCompletionPercent()
}

interface IProgressionStageArchetype
{
    Name : string
    Requirements : List<IRequirement>
    ProgressionStage CreateProgressionStage()
}

interface IProgressionArchetype
{
    Name : string
    Stages : List<IProgressionStageArchetype>
    IProgression CreateProgression()
}

class EmergencyContact
{
    Name : string
    PhoneNumber : string
    Email : string
    Relationship : string
    Notes : string
}

interface IPerson
{
    Name : string
    Birthday : DateTime
    EmergencyContacts : List<EmergencyContact>
}

class TimeSheetEntry
{
    Day : DateTime
    Duration : TimeSpan
}

interface IEmployee
{
    Timesheet : List<TimeSheetEntry>
}

interface IMartialArtist
{
    Progressions : List<IProgression>
}

interface IInstructor
{
    LastSafeSportTestDate : DateTime
    LastBackgroundCheckDate : DateTime
}

class Lesson
{
    Instructor : IInstructor
    Day : DateTime
}

class StudentContract
{
    ContractStartDate : DateTime
    ContractEndDate : DateTime
}

interface IStudent
{
    Contracts : List<StudentContract>
    SpecialNeeds : List<string>
    Notes : List<string>
}

interface IDojo
{
    Address : string
    Name : string
}

interface IClass
{
    HeadInstructors : List<IInstructor>
    AssistantInstructors : List<IInstructor>
    Students : List<IStudent>
    DaysOfWeek : List<DayOfWeek>
    TimeOfDay : TimeSpan
    ProgressionArchetypes : List<IProgressionArchetype>
    Name : string
    Dojo : IDojo
    Lessons : List<Lesson>
}

IMartialArtist ..|> IPerson
IEmployee ..|> IPerson
IInstructor ..|> IEmployee
IInstructor ..|> IMartialArtist
IStudent ..|> IMartialArtist

AttendanceRequirement ..|> IRequirement
ManualApprovalRequirement ..|> IRequirement
AgeRequirement ..|> IRequirement

IEmployee "1" o-- "0..n" TimeSheetEntry

IProgressionStageArchetype "1" *-- "1..n" IRequirement
IProgressionArchetype "1" *-- "1..n" IProgressionStageArchetype
IProgressionArchetype -- IProgression : Creates
IProgressionStageArchetype -- ProgressionStage : Creates

ProgressionStage "1" *-- "1..n" IRequirement
IProgression "1" *-- "1..n" ProgressionStage
AttendanceRequirement "0..m" o-- "0..n" Lesson
AgeRequirement "0..n" *-- "1" IPerson

IPerson "1..n" *-- "0..m" EmergencyContact
IMartialArtist "1" *-- "0..n" IProgression
IStudent "1" *-- "0..n" StudentContract

IClass "0..n" *-- "1..m" IInstructor
IClass "0..n" o-- "0..m" IStudent
IClass "0..n" *-- "1" IDojo
IClass "1" o-- "0..m" Lesson
IClass "1" o-- "0..m" IProgressionArchetype

Lesson "0..n" *-- "1" IInstructor

@enduml